# space-dan

./: .env.production  .force-vercel-deploy  .gitignore  ARCHITECTURE_IDENTITY.md  BEATSOUND_IMPROVEMENTS_GUIDE.md  BEATSOUND_LOADING_FIX.md  BOT_COMMANDS_GUIDE.md  BUSINESS_LOGIC.md  COMMUNITIES_CREATOR_ID_STATUS.md  DESIGN_SYSTEM.md  JUKEBOX_IMPROVEMENTS.md  MANUAL_DEPLOY.md  MOBILE_IMPROVEMENTS.md  README.md  SPACELY_ARCHITECTURE.md  SPACELY_IMPLEMENTATION_SUMMARY.md  SPACELY_INTEGRATION_GUIDE.md  SPACELY_ROADMAP.md  capacitor.config.json  diff.txt  env.production.template  fetch-gifs.cjs  fix.cjs  index.html  migration_starlys.sql  netlify.toml  next.config.static.ts  next.config.ts  package-lock.json  package.json  railway.toml  rename_coins.mjs  tailwind.config.js  test_app.py  test_colls.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts  (+2 more)
.claude/: settings.local.json
Redesign_extracted/: README.md  index.html
android/: build.gradle  gradle.properties  variables.gradle
api/: livekit-token.js
docs/: BUGS_FIXED_2026-04-19.md  CAPACITOR_SPA_ROUTING.md  README.md
frontend/: .emergency-fix  .env.production  .force-redeploy  .force-vercel-deploy  .npmrc  .redeploy  COLYSEUS_SETUP.md  NATIVE_APPS.md  build-native.bat  build-native.sh  capacitor.config.json  index.html  package-lock.json  package.json  vercel.json  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: lib.rs  main.rs
(+993 files in other folders)
