[package]
name = "spacely"
version = "0.0.0"
description = "Spacely — Comunidad galáctica interactiva"
authors = []
license = ""
repository = ""
default-run = "spacely"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "spacely_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "spacely"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"   # Binario más pequeño
codegen-units = 1 # Mejor optimización
lto = true
opt-level = "s"   # Priorizar tamaño del ejecutable
strip = true      # Eliminar símbolos de debug
